include $(top_srcdir)/build-aux/gnome-doc-utils.make
dist-hook: doc-dist-hook
DOC_MODULE = gnome-cd
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_LINGUAS = ca el en_GB es fr it oc ru sv
DOC_FIGURES = figures/cdplayer_trackeditor_button.png	   	\
              figures/cdplayer_trackeditor_window.png		\
              figures/cdplayer_window.png			\
              figures/eject_button.png				\
              figures/forward_button.png			\
              figures/next_button.png				\
              figures/pause_button.png				\
              figures/play_button.png				\
              figures/preferences_button.png			\
              figures/previous_button.png			\
              figures/rewind_button.png				\
              figures/stop_button.png
