SUBDIRS = lcd-theme

pixmapdir = $(datadir)/pixmaps/gnome-cd

BITMAPS = 		\
	    a-eject.png	\
	    a-eject-pressed.png	\
	    a-first.png	\
	    a-first-pressed.png	\
	    a-fwd.png	\
	    a-fwd-pressed.png	\
	    a-last.png	\
	    a-last-pressed.png	\
	    a-pause.png	\
	    a-pause-pressed.png	\
	    a-play.png	\
	    a-play-pressed.png	\
	    a-rwnd.png	\
	    a-rwnd-pressed.png	\
	    a-stop.png	\
	    a-stop-pressed.png	\
	back.xpm	\
	cdrom.xpm	\
	cd.png		\
	eject.xpm	\
	ffwd.xpm	\
	mixer.png	\
	next.xpm	\
	pause.xpm	\
	play.xpm	\
	rewind.xpm	\
	stop.xpm	\
	volume.xpm	\
	goto.xpm

pixmap_DATA = $(BITMAPS)

EXTRA_DIST = $(BITMAPS)
