include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook
DOC_MODULE = gnome-volume-control
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_LINGUAS =
DOC_FIGURES = figures/gmix-prefs.eps			\
              figures/gmix-prefs.png			\
              figures/gmix.eps				\
              figures/gmix.png				\
              figures/gnome-volume-control_window.png