pixmapdir = $(pkgdatadir)/pixmaps

desktopdir = $(datadir)/pixmaps

pixmap_DATA = \
	3dsound.png \
	chain.png \
	chain-broken.png \
	headphones.png \
	mixer.png \
	noplay.png \
	norecord.png \
	phone.png \
	play.png \
	record.png \
	tone.png \
	video.png

desktop_DATA = \
	gnome-mixer.png

EXTRA_DIST=$(pixmap_DATA) $(desktop_DATA)
