pixmapdir = $(datadir)/pixmaps/tcd

BITMAPS = cddb.xpm	\
	cdrom.xpm	\
	edit.xpm	\
	eject.xpm	\
	ff.xpm		\
	goto.xpm	\
	menu.xpm	\
	next_t.xpm	\
	pause.xpm	\
	play.xpm	\
	power.xpm	\
	prev_t.xpm	\
	rw.xpm		\
	stop.xpm	\
	repeat_cd.xpm	\
	repeat_track.xpm\
	repeat_normal.xpm\
	repeat_random.xpm

pixmap_DATA = $(BITMAPS)

EXTRA_DIST = $(BITMAPS)

