pixmapdir = $(datadir)/pixmaps/tcd

BITMAPS = cddb.xpm	\
	cdrom.xpm	\
	edit.xpm	\
	eject.xpm	\
	ff.xpm		\
	goto.xpm	\
	menu.xpm	\
	next_t.xpm	\
	pause.xpm	\
	play.xpm	\
	power.xpm	\
	prev_t.xpm	\
	rw.xpm		\
	stop.xpm	\
	loop.xpm	\
	shuffle.xpm	\
	repeat.xpm	\
	normal.xpm

pixmap_DATA = $(BITMAPS)

EXTRA_DIST = $(BITMAPS)

